# mypyplot_config

./: README.md  pyproject.toml
mypyplot_config/: __init__.py  config.py
