[tool.poetry]
name = "mypyplot_config"
version = "0.1.0"
description = "Pyplot config for a clean plot."
authors = ["Nkzono99 <1735112t@gsuite.kobe-u.ac.jp>"]
license = "Mit"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
